--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon index",
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "uuid": "^8.3.2"
   }
 }
